Week 1/Learning Journal.txt
#Part 1: Question 

Exercise 1.1 from your textbook recommends that you try to make mistakes when experimenting with a new programming feature. 

This kind of experiment helps you remember what you read; it also helps when you are programming because you get to know what the error messages mean. It is better to make mistakes now and on purpose than later and accidentally. (Downey, 2015, 7)

For this Learning Journal, first, answer the following questions based on Exercise 1.1. Include example Python code and output with your answers.

If you are trying to print a string, what happens if you leave out one of the quotation marks or both and why?
You can use a minus sign to make a negative number like -2. What happens for each of the following and why?
>>> 2++2
>>> 2--2
>>> 2+-2
>>> 2-+2

In math notation, leading zeros are OK, as in 02. What happens if you try this in Python and why?
What happens if you have two values with no operator and a space in between them and why?
Part 2:

Next, describe at least three additional Python experiments that you tried while learning Chapter 1. Show the Python inputs and their outputs, and explain what you learned from the results of each example. 

Reference:

Downey, A. (2015). Think Python: How to think like a computer scientist. Green Tea Press. This book is licensed under Creative Commons Attribution-NonCommercial 3.0 Unported (CC BY-NC 3.0). 


#Part 1: Answer

If I try to print a string and leave out one of the quotation marks or both 

>>> print(Hello World)

  File "<stdin>", line 1

    print(Hello World)

                ^

SyntaxError: invalid syntax

>>> print("Hello World)

  File "<stdin>", line 1

    print("Hello World)

                      ^

SyntaxError: EOL while scanning string literal

It shows invaild syntax when I completely left out

quotation marks for the string in the print function.

It differently shows  EOL while scanning string literal error

 as I didn't add quotation mark at the end of the python

 code.




It's adding 2 and +2 (the same as 2), so if we simplify that

2 + (+2 ),the same as 2 + 2 and thus the answer is 4.

>>> 2++2

4



It's subtracting 2 and -2 (2 which has negative value), so if we make it clear

2 - (-2), which has the same with 2 + 2, and thus the anwer is 4.

>>> 2--2

4



It's adding 2 and -2 (negative number), so just to be clear

2 + (-2), the same with 2 - 2, and thus the answer is 0.

>>> 2+-2

0



It's subtracting 2 and +2 (positive number), so if we simplify that

2 - (+2), the same with 2 -2, and thus the answer is 0.

>>> 2-+2

0



In math notation, leading zeros are OK, as in 02, but if we try that in Python,

it shows an error because leading zeros in decimal integers literals are not offically allowed in Python

>>> 03

  File "<stdin>", line 1

    03

     ^

SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers



If I have two values with no operator and a space in between them , and then you run it and it show invalid syntax because in number we can't seperate a space between the two values unless we add some operators.

>>> 3 5

  File "<stdin>", line 1

    3 5

      ^

SyntaxError: invalid syntax



#Part 2: Answer

If we want to get the total seconds for 42 minutes and 42 seconds,

first we need to convert minute to second,

1 minute has 60 seconds, so

42 minutes has 2520 seconds (42 * 60 seconds).

When we add  the rest 42 seconds to that,

the total seconds for 42 minutes and 42 seconds is

2520 seconds + 42 seconds =    2562 seconds

>>> 42 * 60

2520

>>> 2520 + 42

2562



2. There are 6.21118 miles in 10 kilometers.

As the given hint:

1.61 kilometers is equal to one mile, so

10 kilometers is equal to ? mile

>>> 10/1.61

6.211180124223602



3. distance = 10 kilometers = 6.21118 miles

   duration = 42 minutes 42 seconds  = 2562 seconds

first, we will divide duration by distance 

the seconds are 412.482.7

average pace in time per mile is 

6.8747 minutes

>>> 412.48200824964016/60

6.874700137494003



Average speed in miles per hour

 we need to change the unit of duration

duration = 42 minutes 42 seconds = 42.42/60

= 0.707 hour

average speed in miles per hour is 

6.21118/0.707 = 8.7853 miles per hour



>>> 42.42/60

0.707000000000000



>>> 6.21118/0.707

8.785261669024045
